syntax = "proto3";

package ai.stigmer.agentic.executioncontext.v1;

import "ai/stigmer/agentic/executioncontext/v1/spec.proto";
import "ai/stigmer/commons/apiresource/metadata.proto";
import "ai/stigmer/commons/apiresource/status.proto";
import "buf/validate/validate.proto";

// ExecutionContext represents ephemeral runtime configuration and secrets.
// Created during execution, deleted when execution completes.
// Used for B2B scenarios where secrets are injected at runtime (e.g., Plant & Cloud).
message ExecutionContext {
  // API version for this resource type.
  string api_version = 1 [(buf.validate.field).string.const = 'agentic.stigmer.ai/v1'];

  // Resource kind identifier.
  string kind = 2 [(buf.validate.field).string.const = 'ExecutionContext'];

  // Standard resource metadata including name, id, labels, and tags.
  // ExecutionContext must have unspecified owner_scope (operator-managed only).
  ai.stigmer.commons.apiresource.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).cel = {
      id: "execution_context.owner_scope.unspecified_only"
      message: "ExecutionContext owner_scope must be unspecified (operator-managed resource)"
      expression: "this.owner_scope == 0"
    }
  ];

  // ExecutionContext-specific configuration.
  ExecutionContextSpec spec = 4;

  // System-managed status containing audit information.
  ai.stigmer.commons.apiresource.ApiResourceAuditStatus status = 5;
}
